--- a/templates/doctoral_consortium.html
+++ b/templates/doctoral_consortium.html
@@ -74,7 +74,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 1</b><br />1. Effective Clustering of scRNA-seq Data to Identify Biomarkers without User Input<br />2. Safety Assurance for Systems with Machine Learning Components<br />3. Constraint-Driven Learning of Logic Programs</td>
+                <td scope="row"><b>Session 1</b><br /><a href="paper_DC-118.html">1. Effective Clustering of scRNA-seq Data to Identify Biomarkers without User Input</a><br /><a href="paper_DC-429.html">2. Safety Assurance for Systems with Machine Learning Components</a><br /><a href="paper_DC-317.html">3. Constraint-Driven Learning of Logic Programs</a></td>
               <td style="white-space: pre-wrap;">1. Speaker: Hussain Chowdhury, Mentor: Jay Thiagrajan, Buddy: Rolf Morel <br />2. Speaker: Chelsea Sidrane, Mentor: Matthijs T. J. Spaan, Buddy: Puspita Mazumdar<br />3. Speaker: Rolf Morel, Mentor: Luc De Raedt, Buddy: Hussain Chowdhry
               </td>
             </tr>
@@ -83,7 +83,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 2</b><br />1. Artificial Intelligence and Machine Learning forautonomous agents that learn to plan and operatein unpredictable dynamic environments<br />2. Screening for Depressed Individuals by Using Multimodal Social Media Data</td>
+                <td scope="row"><b>Session 2</b><br /><a href="paper_DC-281.html">1. Artificial Intelligence and Machine Learning for autonomous agents that learn to plan and operatein unpredictable dynamic environments</a><br /><a href="paper_DC-318.html">2. Screening for Depressed Individuals by Using Multimodal Social Media Data</a></td>
                 <td style="white-space: pre-wrap;">1. Speaker: Leonardo Lamana, Mentor: Felipe Meneguzzi, Buddy: Sagir Muhammad Yusuf <br />2. Speaker: Paulo Mann, Mentor: Maria Chang, Buddy: Preeti Ramaraj</td>
             </tr>
         {% elif event.session_name == "Session 3" and event.day == "Feb 3" %}
@@ -91,7 +91,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 3</b><br />1. AI for Social Good: Between My Research and the Real World<br />2. How Human Centered AI Will Contribute Towards Intelligent Gaming Systems<br />3. Perception Beyond Sensors Under Uncertainty</td>
+                <td scope="row"><b>Session 3</b><br /><a href="paper_DC-79.html">1. AI for Social Good: Between My Research and the Real World</a><br /><a href="paper_DC-304.html">2. How Human Centered AI Will Contribute Towards Intelligent Gaming Systems</a><br /><a href="paper_DC-311.html">3. Perception Beyond Sensors Under Uncertainty</a></td>
                 <td style="white-space: pre-wrap;">1. Speaker: Zheyuan Ryan Shi, Mentor: Shiwali Mohan, Buddy: Dario Guidotti <br />2. Speaker: Yilei Zeng, Mentor: Mark O. Riedl, Buddy: Mehrnoosh Mirtaheri<br />3. Speaker: Masha Itkina, Mentor: Sven Koenig, Buddy: Ivan Stelmakh</td>
             </tr>
         {% elif event.session_name == "Session 1" and event.day == "Feb 3" %}
@@ -99,7 +99,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 1</b><br />1. Effect of Alterations on Face Recognition Algorithms<br />2. Multi-agent Reinforcement Learning for Decentralized Coalition Formation Games<br />3. Multi-agent Reinforcement Learning for Decentralized Coalition Formation Games<br />4. Engagement Assessment for Robot-Assisted Therapy Adaptation for Children with ASD</td>
+                <td scope="row"><b>Session 1</b><br />1. Effect of Alterations on Face Recognition Algorithms<br /><a href="paper_DC-340.html">2. Multi-agent Reinforcement Learning for Decentralized Coalition Formation Games</a><br /><a href="paper_DC-246.html">3. Distributed Situation Awareness for Multi-agent Mission in Dynamic En-vironments: A Case Study of Multi-UAVs Wildfires Searching</a><br />4. Engagement Assessment for Robot-Assisted Therapy Adaptation for Children with ASD</td>
                 <td style="white-space: pre-wrap;">1. Speaker: Puspita Mazumdar, Mentor: Bhavya Kailkhura, Buddy: Chelsea Sidrane <br />2. Speaker: Kshitija Taywade, Mentor: Balaraman Ravindran, Buddy: Nazerke Rakhymbayeva<br />3. Speaker: Sagir Muhammad Yusuf, Mentor: Biplav Srivastava, Buddy: Leonardo Lamanna<br />4. Speaker: Nazerke Rakhymbayeva, Mentor: Maria Gini, Buddy: Kshitija Taywade</td>
             </tr>
         {% elif event.session_name == "Session 2" and event.day == "Feb 3" %}
@@ -107,7 +107,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 2</b><br />1. Towards Fair, Equitable, and Efficient Peer Review<br />2. Verification and Repair of Neural Networks<br />3. Relational Learning to Capture the Dynamics and Sparsity of Knowledge Graphs</td>
+                <td scope="row"><b>Session 2</b><br /><a href="paper_DC-169.html">1. Towards Fair, Equitable, and Efficient Peer Review</a><br /><a href="paper_DC-127.html">2. Verification and Repair of Neural Networks</a><br /><a href="paper_DC-423.html">3. Relational Learning to Capture the Dynamics and Sparsity of Knowledge Graphs</a></td>
                 <td style="white-space: pre-wrap;">1. Speaker: Ivan Stelmakh, Mentor: Ece Kamar, Buddy: Masha Itkina <br />2. Speaker: Dario Guidotti, Mentor: Eric Eaton, Buddy: Zheyuan Ryan Shi<br />3. Speaker: Mehrnoosh Mirtaheri, Mentor: Pin-Yu Chen, Buddy: Yilei Zeng</td>
             </tr>
         {% elif event.session_name == "Session 3" and event.day == "Feb 4" %}
@@ -115,7 +115,7 @@
                 <td>
                   {{event.day}}, <span class="session_times">{{event.time_string}}</span>
                 </td>
-                <td scope="row"><b>Session 3</b><br />1. Robots that Help Humans Build Better Mental Models of Robots<br />2. A Computational Approach to Sign Language Understanding<br />3. Creating Interpretable Data-Driven Approaches for Remote Health Monitoring</td>
+                <td scope="row"><b>Session 3</b><br /><a href="paper_DC-314.html">1. Robots that Help Humans Build Better Mental Models of Robots</a><br /><a href="paper_DC-276.html">2. A Computational Approach to Sign Language Understanding</a><br /><a href="paper_DC-200.html">3. Creating Interpretable Data-Driven Approaches for Remote Health Monitoring</a></td>
                 <td style="white-space: pre-wrap;">1. Speaker: Preeti Ramaraj, Mentor: Laura Hiatt, Buddy: Paulo Mann <br />2. Speaker: Tejaswini Ananthanarayana, Mentor: Shirin Sohrabi, Buddy: Alireza Ghods<br />3. Speaker: Alireza Ghods, Mentor: Rushil Anirudh, Buddy: Tejaswini Ananthanarayana</td>
             </tr>
         {% else %}
