--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
             </li>
 {#            <br>#}
             <li>
-                Pre-recorded talks for the following programs are also available: Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, the Classic Paper Award Talk, and the AAAI/ACM SIGAI Dissertation Award Talk. Live Q&A video sessions (Zoom/Gather.Town) will be available via the assigned poster session times, as well as a linked RocketChat channel (for chatting anytime with the author).
+                Pre-recorded talks for the following programs are also available: Senior Member Talks, Demonstrations, Student Abstract Program, Doctoral Consortium, the Classic Paper Award Talk, and the AAAI/ACM SIGAI Dissertation Award Talk. Live Q&A video sessions (Zoom/Virtual Chair on Gather.Town) will be available via the assigned poster session times, as well as a linked RocketChat channel (for chatting anytime with the author).
             </li>
         </dd>
 
