--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -54,24 +54,24 @@ EAAI-21 co-chairs
     <div class="col-12 pb-4" role="main">
 
 <h1 style="text-align: center" id="eaai-21-program-schedule">EAAI-21 Program Schedule</h1>
-<p style="text-align: center"><em>last updated: January 7, 2021</em></p>
+{#<p style="text-align: center"><em>last updated: January 7, 2021</em></p>#}
 <h2 id="saturday-february-6-2021">Saturday, February 6, 2021</h2>
-<p>9:30am - 5:15pm EST </p>
-<p><strong>[9:30-10:45am]  Talking to the Public about AI</strong><br>
+<p>6:30am - 2:15pm PST </p>
+<p><strong>[6:30-7:45am]  Talking to the Public about AI</strong><br>
 <em>Michael Wooldridge - University of Oxford and Alan Turing Institute, London</em></p>
 <p>Since everything went crazy in AI, around 2012, I, like many other members of our community, have frequently found myself put in the position of having to talk about our field to a non-specialist audience. I've been interviewed on TV and radio, and spoken to endless university committees, government committees, and industrial conferences. More recently, following the publication of my two popular science books (the Ladybird Expert Guide to AI [2018], and The Road to Conscious Machines [2020]), I've even begun speaking at a literary festivals (believe me, I never expected to be doing this as a PhD student studying multiagent systems back in 1989). In this talk, I will relate these experiences, the mistakes I made, and what I learned from them – how our field is perceived, what people fear, hope, and expect from it, and how best to communicate excitement about the very real progress we've made recently with a realistic understanding of where we are and where we are going.</p>
 <p><em>Michael Wooldridge is the winner of this year’s Outstanding Educator award. He is a Professor of Computer Science and Head of Department of Computer Science at the University of Oxford, and a programme director for AI at the Alan Turing Institute. He is a Fellow of the ACM, the Association for the Advancement of AI (AAAI), and the European Association for AI (EurAI). From 2014-16, he was President of the European Association for AI, and from 2015-17 he was President of the International Joint Conference on AI (IJCAI). As well as more than 400 technical articles on AI, he has published two popular science introductions to the field: The Ladybird Expert Guide to AI (2018), and The Road to Conscious Machines (Pelican, 2020).</em></p>
-<p><strong>[10:45 - 11:00]  Welcome</strong><br>
+<p><strong>[7:45 - 8:00]  Welcome</strong><br>
 <em>Lisa Torrey - St. Lawrence University</em><br>
 <em>Michael Guerzhoy - Princeton University</em>  </p>
-<p><strong>[11:00 - 11:45]  Main Track</strong>  </p>
+<p><strong>[8:45 - 9:45]  Main Track</strong>  </p>
 <ul>
     <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-16.ZengY.pdf">Applied Machine Learning for Games: A Graduate School Course</a><br>
 <em>Yilei Zeng, Aayush Shah, Jameson Thai, Michael Zyda</em></li>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-42.SilvaFLD.pdf">Designing a Hybrid AI Residency</a><br>
 <em>Felipe Leno Da Silva, Silvio Stanzani, Jefferson Coelho, Jorge Mondadori, Muriel Mazzetto, Felipe Sanches Couto, Raphael Cobe</em></li>
 </ul>
-<p><strong>[11:45 - 12:45]  Main Track</strong>  </p>
+<p><strong>[9:45 - 12:00]  Main Track</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-26.LeeS.pdf">AI-Infused Collaborative Inquiry in Upper Elementary School: A Game-Based Learning Approach</a><br>
 <em>Seung Lee, Bradford Mott, Anne Ottenbreit-Leftwich, Adam Scribner, Sandra Taylor, Kyungjin Park, Jonathan Rowe, Krista Glazewski, Cindy Hmelo-Silver, James Lester</em></li>
@@ -80,7 +80,7 @@ EAAI-21 co-chairs
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-78.GreenwaldE.pdf">Learning Artificial Intelligence: Insights into How Youth Encounter and Build Understanding of AI Concepts</a><br>
 <em>Eric Greenwald, Maxyn Leitner, Ning Wang</em></li>
 </ul>
-<p><strong>[12:45 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong></p>
+<p><strong>[9:45 - 12:00]  Gin Rummy Undergraduate Research Challenge</strong></p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-18.GoldsteinB.pdf">Extracting Learned Discard and Knocking Strategies from a Gin Rummy Bot</a><br>
 <em>Benjamin Goldstein, Jean Astudillo Guerra, Emily Haigh, Bryan Cruz Ulloa, Jeremy Blum</em></li>
@@ -97,21 +97,21 @@ EAAI-21 co-chairs
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-91.MaravichR.pdf">Knocking in the Game of Gin Rummy</a><br>
 <em>Ryzeson Maravich, Taylor Neller, Todd Neller</em></li>
 </ul>
-<p><strong>[3:00 - 3:45]  Main Track</strong>  </p>
+<p><strong>[12:00 - 12:45]  Main Track</strong>  </p>
 <ul>
 <li>Using Visualized NLP in Undergraduate Students' Learning about Natural Language</a><br>
 <em>Cecilia Ovesdotter Alm, Alex Hedges</em></li>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-68.GrenanderM.pdf">Deep Discourse Analysis for Generating Personalized Feedback in Intelligent Tutor Systems</a><br>
 <em>Matt Grenander, Robert Belfer, Ekaterina Kochmar, Iulian Serban, François St-Hilaire, Jackie Cheung</em> </li>
 </ul>
-<p><strong>[3:45 - 4:30]  Main Track</strong>  </p>
+<p><strong>[12:45 - 1:30]  Main Track</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-65.WangZ.pdf">Educational Question Mining At Scale: Prediction, Analysis and Personalization</a><br>
 <em>Zichao Wang, Sebastian Tschiatschek, Simon Woodhead, Jose Miguel Hernandez Lobato, Simon Peyton Jones, Richard Baraniuk, Cheng Zhang</em></li>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-85.KimS.pdf">Student Knowledge Prediction for Teacher-Student Interaction</a><br>
 <em>Seonghun Kim, Woojin Kim, Yeonju Jang, Heeseok Jung, Seongyune Choi, Hyeoncheol Kim</em></li>
 </ul>
-<p><strong>[4:30 - 5:15]  Main Track</strong>  </p>
+<p><strong>[1:30 - 2:15]  Main Track</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-84.KimS.pdf">Why and What to Teach: AI Curriculum for Elementary School</a><br>
 <em>Seonghun Kim, Yeonju Jang, Woojin Kim, Seongyune Choi, Heeseok Jung, Soohwan Kim, Hyeoncheol Kim</em></li>
@@ -120,7 +120,7 @@ EAAI-21 co-chairs
 </ul>
 <h2 id="sunday-february-7-2021">Sunday, February 7, 2021</h2>
 <p>10:00am - 6:00pm EST </p>
-<p><strong>[10:00 - 11:15]  Teaching Online and Blended AI Courses</strong><br>
+<p><strong>[7:00 - 8:15]  Teaching Online and Blended AI Courses</strong><br>
 <em>Ashok Goel - Georgia Institute of Technology</em><br>
 <em>Ansaf Salleb-Aouissi - Columbia University</em><br>
 <em>Mehran Sehami - Stanford University</em>  </p>
@@ -128,7 +128,7 @@ EAAI-21 co-chairs
 <p><em>Ashok Goel is a Professor in the School of Interactive Computing at Georgia Institute of Technology and the Chief Scientist with Georgia Tech’s Center for 21st Century Universities. In 2014, he co-developed a Udacity course on Knowledge-Based AI; in 2016, his research laboratory developed Jill Watson, a virtual teaching assistant for automatically answering questions in online classes; and in 2019, he co-edited a volume on Blended Learning published by MIT Press. Ashok received AAAI’s Outstanding AI Educator Award in 2019, and the University System of Georgia’s Hall of Fame Faculty Award for Scholarship of Teaching and Learning in 2020.</em></p>
 <p><em>Ansaf Salleb-Aouissi is a senior lecturer in computer science with specific interests in machine learning and AI applications, including education and healthcare. She has published in top quality venues including JMLR, TPAMI, AAAI,  ECML, PKDD, COLT, IJCAI, ECAI, CHILL, and AISTAT. She also has a genuine interest in education and teaching, particularly on how to translate complex topics and break up abstract concepts into a form understandable and engaging to students. Recently, she has been working on building education tools for auto-grading and self-learning to provide additional support to her students in computer science and discrete mathematics. Her EdX course on Artificial Intelligence has attracted over a quarter million learners from all over the world since 2017.</em></p>
 <p><em>Mehran Sahami is the James and Ellenor Chesebrough Professor in Engineering and Associate Chair for Education in the Computer Science department at Stanford University. He is also the Robert and Ruth Halperin University Fellow in Undergraduate Education. He served as co-chair of the ACM/IEEE-CS joint task force on Computer Science Curricula 2013, is Past Chair of the ACM Education Board, and was appointed by the Governor of California to the state's Computer Science Strategic Implementation Plan Advisory Panel.</em></p>
-<p><strong>[11:15 - 12:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
+<p><strong>[8:15 - 9:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-47.WuC.pdf">Web-based Platform for K-12 AI Education in China</a><br>
 <em>Chao Wu, Yan Li, Junxiang Li, Qiongdan Zhang, Fei Wu</em></li>
@@ -137,7 +137,7 @@ EAAI-21 co-chairs
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-20.VanBrummelenJ.pdf">Teaching Tech to Talk: K-12 Conversational Artificial Intelligence Literacy Curriculum and Development Tools</a><br>
 <em>Jessica Van Brummelen, Tommy Heng, Viktoriya Tabunshchyk</em> </li>
 </ul>
-<p><strong>[12:15 - 1:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
+<p><strong>[9:15 - 10:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-75.VirtueP.pdf">GANs Unplugged</a><br>
 <em>Patrick Virtue</em></li>
@@ -146,7 +146,7 @@ EAAI-21 co-chairs
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-53.LeeI.pdf">The Contour to Classification game</a><br>
 <em>Irene Lee, Safinah Ali</em> </li>
 </ul>
-<p><strong>[1:15 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong>  </p>
+<p><strong>[10:15 - 12:00]  Gin Rummy Undergraduate Research Challenge</strong>  </p>
 <ul>
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-66.EicholtzM.pdf">Heisenbot: A Rule-Based Game Agent for Gin Rummy</a> <br>
 <em>Matthew Eicholtz, Savanna Moss, Matt Traino, Christian Roberson</em></li>
@@ -161,28 +161,28 @@ EAAI-21 co-chairs
 <li><a href="https://www.aaai.org/AAAI21Papers/EAAI-67.LarkinS.pdf">Modeling Expert and Folk Knowledge in a Heuristic-Based Reflex Agent for Gin Rummy</a><br>
 <em>Sarah Larkin, William Collicott, Jason Hiebel</em> </li>
 </ul>
-<p><strong>[3:00 - 3:45]  Model AI Assignments</strong>  </p>
+<p><strong>[12:00 - 12:45]  Model AI Assignments</strong>  </p>
 <ul>
 <li>“Unplugged” Semantic Networks and Knowledge Representations</a><br>
 <em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
 <li>Introducing AI Worksheet Activity<br>
 <em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
 </ul>
-<p><strong>[3:45 - 4:30]  Model AI Assignments</strong></p>
+<p><strong>[12:45 - 1:30]  Model AI Assignments</strong></p>
 <ul>
 <li>Rushhour: designing and comparing heuristics for a children's puzzle<</a>br>
 <em>John Maraist</em> </li>
 <li>Using Markov Chain Text Generators to Facilitate Found Poetry Creation</a><br>
 <em>Alex Leto, Toni Lefton, Tom Williams</em> </li>
 </ul>
-<p><strong>[4:30 - 5:15]  Model AI Assignments</strong>  </p>
+<p><strong>[1:30 - 2:15]  Model AI Assignments</strong>  </p>
 <ul>
 <li>ScalarFlow: Implementing Reverse Mode Automatic Differentiation<br>
 <em>Nathan Sprague</em></li>
 <li>Text Denoising Autoencoder for News Headlines<br>
 <em>Lisa Zhang, Pouria Fewzee</em></li>
 </ul>
-<p><strong>[5:15 - 6:00]  Community Meeting</strong><br>
+<p><strong>[2:15 - 3:00]  Community Meeting</strong><br>
 All attendees are invited to join us for an informal community meeting at the end of EAAI-21, where we'll socialize and share ideas for next year's symposium.</p>
             </div>
 </div>
