--- a/templates/invited_panels_program.html
+++ b/templates/invited_panels_program.html
@@ -19,7 +19,7 @@ Governments 1 Panel: Government AI Strategy Panel<br>
 Governments 2 Panel: Government AI Strategy Panel<br>
 Governments 3 Panel: Government AI Strategy Panel<br>
 
-(For information about the IAAI-21 AI in Practice Panels, please see <a href="ai_in_practice.html">URL</a>.)
+(For information about the IAAI-21 AI in Practice Panels, please see <a href="ai_in_practice.html">https://virtual.2021.aaai.org/ai_in_practice.html</a>.)
     </div>
     </div>
 <!-- Uncomment this block after all livestream events are over.
