delete watch video

--- a/templates/components.html
+++ b/templates/components.html
@@ -72,7 +72,7 @@
 {#              {% else %}#}
 {#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
 {#              {% endif %}#}
-                [<a href="livestream.html"   class="card-link">Watch video</a>]
+{#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
 
@@ -131,7 +131,7 @@
 {#              {% else %}#}
 {#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
 {#              {% endif %}#}
-                [<a href="livestream.html"   class="card-link">Watch video</a>]
+{#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
 
@@ -187,7 +187,7 @@
 {#              {% else %}#}
 {#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
 {#              {% endif %}#}
-                [<a href="livestream.html"   class="card-link">Watch video</a>]
+{#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
 
@@ -249,7 +249,7 @@
 {#              {% else %}#}
 {#                [<a href="livestream.html"   class="card-link">Join Livestream</a>]#}
 {#              {% endif %}#}
-                [<a href="livestream.html"   class="card-link">Watch video</a>]
+{#                [<a href="livestream.html"   class="card-link">Watch video</a>]#}
             </div>
             {% endfor %}
 
