--- a/templates/papers.html
+++ b/templates/papers.html
@@ -29,7 +29,7 @@
 {% block heading %}
    {{ components.section("Papers") }}
   <div class="text-muted text-center">
-  To see a list of poster sessions, please visit our poster session overview for <a href="main_aisi_smt.html" target="_blank">Main Track, AI for Social Impact Track and Senior Member Track</a>, <a href="demonstrations.html" target="_blank">Demonstrations</a>, <a href="student_abstract_program.html" target="_blank">Student Abstract</a>, <a href="doctoral_consortium.html" target="_blank">Doctoral Consortium</a>, <a href="undergraduate_consortium.html" target="_blank">Undergraduate Consortium</a>, and <a href="iaai.html" target="_blank">IAAI</a>.
+  To see a list of poster sessions, please visit our poster session overview for <a href="posters.html" target="_blank">Main Track, AI for Social Impact Track and Senior Member Track</a>, <a href="demonstrations.html" target="_blank">Demonstrations</a>, <a href="student_abstract_program.html" target="_blank">Student Abstract</a>, <a href="doctoral_consortium.html" target="_blank">Doctoral Consortium</a>, <a href="undergraduate_consortium.html" target="_blank">Undergraduate Consortium</a>, and <a href="iaai.html" target="_blank">IAAI</a>.
 
 {#    You can download a list of your favorite papers <a id="myLink" href="#" onclick="saveFavorites();">here</a>.#}
 
