--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -13,7 +13,7 @@
   <br />
   Click each session card in the day view to find out all papers in the specific session.
   <br />
-  <strong>To see a list of all paper Q&A sessions, please visit our <a href="main_aisi_smt.html">
+  <strong>To see a list of all paper Q&A sessions, please visit our <a href="posters.html">
     Q&A session overview
   </a> .</strong>
   </div>
