add dc zoom link

--- a/templates/doctoral_consortium.html
+++ b/templates/doctoral_consortium.html
@@ -42,7 +42,7 @@
     <a href="https://aaaidc.github.io/dc2021/" target="_blank"  class="card-link">
         External Site
     </a>
-    <a href="https://123.com" target="_blank"  class="card-link">
+    <a href="https://zoom.us/meeting/register/tJArfuurrD0pGNJMLr35AlJJ1mz1mUqc_LzQ" target="_blank"  class="card-link">
         Join Zoom Meeting
     </a>
     </div>
